--- a/blog.html
+++ b/blog.html
@@ -52,10 +52,10 @@
                 <i class="fas fa-times" onclick="hideCon()"></i>
                 <ul>
                     <li>
-                        <a href="./index.html"> Connexion</a>
+                        <a href="./connexion.html"> Connexion</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Inscription</a>
+                        <a href="./inscription.html"> Inscription</a>
                     </li>
 
                 </ul>
@@ -66,57 +66,16 @@
 
 
         </nav>
-        <!-- le form-->
-        <div class="form-connexion">
-            <div class="form-connexion-content">
-                <div class="form-connexion-logo">
-                    <img src="./assets/images/logo_s1.png" alt="logo">
-                </div>
-                <div class="form-connexion-header">
-                    <h1>Se connecter</h1>
-                </div>
-                <div class="form-connexion-body">
-                    <form action="#" method="POST">
-                        <div class="form-connexion-input">
-                            <input type="email" name="email" id="email" placeholder="Email">
-                        </div>
-                        <div class="form-connexion-input">
-                            <span class="error"></span>
-                            <input type="password" name="password" id="password" placeholder="Mot de passe">
-
-                        </div>
-                        <div class="form-connexion-links">
-                            <a href="#">Mot de passe oublié ?</a>
-                            <div class="eye">
-                                <i class="fa fa-eye-slash" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="form-connexion-input-submit">
-                            <input type="submit" value="Se connecter" class="button-success">
-                        </div>
-                        <div class="form-connexion-input-submit">
-                            <span onclick="location='./inscription.html'">
-                                Vous n'avez pas de compte ?
-                            </span>
-                            <a class="link" href="./inscription.html">Inscrivez vous</a>
-
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-
-
-
     </section>
+
+
     <script>
     </script>
-    <script src="./assets/scripts/form.js"></script>
-    <script src="./assets/scripts/initMap.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_IEjM6QGiiLnJfeQPRK7Pq6hHUBhrPDo&libraries=places&callback=initMap"></script>
-    <script src="./assets/scripts/menu.js"></script>
 
+
+    <script src="./assets/scripts/animate_card.js"></script>
+    <script src="./assets/scripts/menu.js"></script>
+    <script src="./assets/scripts/audio_layers.js"></script>
 
 </body>
 
