--- a/DesignGui/layout-navbar.html
+++ b/DesignGui/layout-navbar.html
@@ -36,7 +36,7 @@
                     <a href="./blog.html"> Blog</a>
                 </li>
                 <li>
-                    <a href="#"> Contact</a>
+                    <a href="./contact.html"> Contact</a>
                 </li>
                 <li>
                     <a href="#cta"> |</a>
