--- a/commander.html
+++ b/commander.html
@@ -32,7 +32,7 @@
                         <a href="./blog.html"> Blog</a>
                     </li>
                     <li>
-                        <a href="#"> Contact</a>
+                        <a href="./contact.html"> Contact</a>
                     </li>
                     <li>
                         <a href="#cta"> |</a>
