update design gui

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -25,12 +25,14 @@
         <a href="./layout-navbar.html" onclick="loadPage('layout-navbar.html'); return false;">NavBar</a>
         <a href="./component-animate_card.html" onclick="loadPage('component-animate_card.html'); return false;">Charger le layer</a>
         <a href="./component-button.html" onclick="loadPage('component-button.html'); return false;">Boutton</a>
+        <a href="./component-forms.html" onclick="loadPage('component-forms.html'); return false;">Forms</a>
+
 
 
     </div>
 
 
-    <div id="content" style="background-color: gray;"></div>
+    <div id="content" style="/*background-color: gray;*/ width: 75%; margin-left: 35%; margin-top: -23%;"></div>
 
     <script>
         function loadPage(url) {
