upade design gui page

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.397), rgba(30, 4, 4, 0.7)), url(../../assets/images/background_nba.png);">
     <div class="design_gui">
         <h1>Design GUI</h1>
         <a href="./component-form.html" onclick="loadPage('component-form.html'); return false;">Formulaire</a>
@@ -32,7 +32,7 @@
     </div>
 
 
-    <div id="content" style="/*background-color: gray;*/ width: 75%; margin-left: 35%; margin-top: -23%;"></div>
+    <div id="content" style="/*background-color: gray;*/ width: 60%; margin-left: 35%; margin-top: -18%; overflow-y: scroll;  height: calc(108vh - 80px);"></div>
 
     <script>
         function loadPage(url) {
