--- a/product.html
+++ b/product.html
@@ -73,13 +73,13 @@
                 Nos Burgers 
             </span>
             </a>
-            <a href="# " class="icon " id="3">
+            <a href="#" class="icon " id="2">
                 <img src="./assets/images/sidebar/icons8-frt.png ">
                 <span>
                 Nos Frittes 
             </span>
             </a>
-            <a href="#" class="icon" id="2">
+            <a href="#" class="icon" id="3">
                 <img src="./assets/images/sidebar/caf.png" alt="image de café">
                 <span>
                 Nos Cafés 
@@ -124,13 +124,206 @@
             </a>
         </div>
         <div class="content">
-            <section>
+            <section id="1">
+                <div style="color:gray;">
+                    <h1>Nos Burger</h1>
+                    <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                               Big Mac
+                            </span>
+                        <span class="article_price">
+                                12.99€
+                            </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                          Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                          Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+
 
 
             </section>
             <section id="2">
                 <div style="color:gray;">
-                    <h1>Nos Burger</h1>
+                    <h1>Nos Frittes</h1>
                     <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
                 </div>
                 <div class="row">
@@ -345,6 +538,7 @@
 
     <script src="./assets/scripts/sidebar.js "></script>
     <script src="./assets/scripts/menu.js"></script>
+
 
 
 </body>
