--- a/product.html
+++ b/product.html
@@ -125,7 +125,7 @@
         </div>
         <div class="content">
             <section id="1">
-                <div style="color:gray;">
+                <div>
                     <h1>Nos Burger</h1>
                     <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
                 </div>
@@ -322,13 +322,13 @@
 
             </section>
             <section id="2">
-                <div style="color:gray;">
+                <div>
                     <h1>Nos Frittes</h1>
                     <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
                 </div>
                 <div class="row">
                     <div class="card">
-                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
                            Big Mac
                         </span>
@@ -337,7 +337,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
                                Big Mac
                             </span>
@@ -346,7 +346,7 @@
                             </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
                            Big Mac
                         </span>
@@ -355,7 +355,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
                            Big Mac
                         </span>
@@ -364,7 +364,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
                            Big Mac
                         </span>
@@ -375,7 +375,7 @@
                 </div>
                 <div class="row">
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
                           Chicken
                         </span>
@@ -384,7 +384,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
                           Chicken
                         </span>
@@ -393,7 +393,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
                           Chicken
                         </span>
@@ -402,7 +402,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
                           Chicken
                         </span>
@@ -411,7 +411,7 @@
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
                           Chicken
                         </span>
@@ -422,95 +422,95 @@
                 </div>
                 <div class="row">
                     <div class="card">
-                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
                         </span>
                         <span class="article_price">
-                            12.99€
+                            2.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
                         </span>
                         <span class="article_price">
-                            12.99€
+                            2.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
                         </span>
                         <span class="article_price">
-                            12.99€
+                            2.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
                         </span>
                         <span class="article_price">
-                            12.99€
+                            2.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
                         </span>
                         <span class="article_price">
-                            12.99€
+                            2.99€
                         </span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="card">
-                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
                           Mc Chicken
                         </span>
                         <span class="article_price">
-                            12.99€
+                            5.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
                           Mc Chicken
                         </span>
                         <span class="article_price">
-                            12.99€
+                            5.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
                             Mc Chicken
                         </span>
                         <span class="article_price">
-                            12.99€
+                            5.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
                             Mc Chicken
                         </span>
                         <span class="article_price">
-                            12.99€
+                            5.99€
                         </span>
                     </div>
                     <div class="card">
-                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
                             Mc Chicken
                         </span>
                         <span class="article_price">
-                            12.99€
+                            5.99€
                         </span>
                     </div>
                 </div>
