edit product page

--- a/product.html
+++ b/product.html
@@ -324,13 +324,14 @@
             <section id="2">
                 <div>
                     <h1>Nos Frittes</h1>
-                    <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
+                    <p>Envie de bonnes frites ou de Deluxe Potatoes™ fondantes ? Quoi de mieux qu’une onctueuse sauce McDonald’s pour les accompagner ? Ketchup, sauce pommes-frites, sauce classic moutarde, ou encore sauce creamy deluxe… Classiques, originales
+                        ou exotiques, les sauces McDonald’s subliment à coup sûr vos instants gourmands ! Un large choix de sauces vous est aussi proposé en accompagnement des Salades du Jour.</p>
                 </div>
                 <div class="row">
                     <div class="card">
                         <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
-                           Big Mac
+                           Patates
                         </span>
                         <span class="article_price">
                             12.99€
@@ -339,7 +340,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
-                               Big Mac
+                            Patates
                             </span>
                         <span class="article_price">
                                 12.99€
@@ -348,7 +349,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
-                           Big Mac
+                            Patates
                         </span>
                         <span class="article_price">
                             12.99€
@@ -357,7 +358,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
-                           Big Mac
+                            Patates
                         </span>
                         <span class="article_price">
                             12.99€
@@ -366,7 +367,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-1.png" alt="image de burgers">
                         <span class="article_name">
-                           Big Mac
+                            Patates
                         </span>
                         <span class="article_price">
                             12.99€
@@ -377,7 +378,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
+                          Nature
                         </span>
                         <span class="article_price">
                             12.99€
@@ -386,7 +387,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
+                            Nature
                         </span>
                         <span class="article_price">
                             12.99€
@@ -395,7 +396,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
+                            Nature
                         </span>
                         <span class="article_price">
                             12.99€
@@ -404,7 +405,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
+                            Nature
                         </span>
                         <span class="article_price">
                             12.99€
@@ -413,7 +414,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-2.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
+                            Nature
                         </span>
                         <span class="article_price">
                             12.99€
@@ -424,7 +425,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
-                          Big Burger
+                          Classique
                         </span>
                         <span class="article_price">
                             2.99€
@@ -433,7 +434,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
-                          Big Burger
+                            Classique
                         </span>
                         <span class="article_price">
                             2.99€
@@ -442,7 +443,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
-                          Big Burger
+                            Classique
                         </span>
                         <span class="article_price">
                             2.99€
@@ -451,7 +452,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
-                          Big Burger
+                            Classique
                         </span>
                         <span class="article_price">
                             2.99€
@@ -460,7 +461,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-3.png" alt="image de burgers">
                         <span class="article_name">
-                          Big Burger
+                            Classique
                         </span>
                         <span class="article_price">
                             2.99€
@@ -471,7 +472,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
-                          Mc Chicken
+                          Big Frites
                         </span>
                         <span class="article_price">
                             5.99€
@@ -480,7 +481,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
-                          Mc Chicken
+                            Big Frites
                         </span>
                         <span class="article_price">
                             5.99€
@@ -489,7 +490,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
-                            Mc Chicken
+                            Big Frites
                         </span>
                         <span class="article_price">
                             5.99€
@@ -498,7 +499,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
-                            Mc Chicken
+                            Big Frites
                         </span>
                         <span class="article_price">
                             5.99€
@@ -507,7 +508,7 @@
                     <div class="card">
                         <img src="./assets/images/frite-4.png" alt="image de burgers">
                         <span class="article_name">
-                            Mc Chicken
+                            Big Frites
                         </span>
                         <span class="article_price">
                             5.99€
