try build caarousel

--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,16 @@
 
 
         </nav>
+        <div class="carousel">
+            <ul>
+                <li><img src="./assets/images/rest-1.png" alt="image 1"></li>
+                <li><img src="./assets/images/rest-2.png" alt="image 2"></li>
+                <li><img src="./assets/images/rest-3.png" alt="image 3"></li>
+            </ul>
+            <button class="carousel__prev"></button>
+            <button class="carousel__next"></button>
+        </div>
+
     </section>
 
 
@@ -76,6 +86,8 @@
     <script src="./assets/scripts/animate_card.js"></script>
     <script src="./assets/scripts/menu.js"></script>
     <script src="./assets/scripts/audio_layers.js"></script>
+    <script src="./assets/scripts/carousel.js"></script>
+
 
 </body>
 
