try build caarousel

--- a/blog.html
+++ b/blog.html
@@ -68,9 +68,9 @@
         </nav>
         <div class="carousel">
             <ul>
-                <li><img src="./assets/images/rest-1.png" alt="image 1"></li>
-                <li><img src="./assets/images/rest-2.png" alt="image 2"></li>
-                <li><img src="./assets/images/rest-3.png" alt="image 3"></li>
+                <li><img src="./assets/images/rest-1.png" alt="image 1" class="hidden"></li>
+                <li><img src="./assets/images/rest-2.png" alt="image 2" class="hidden"></li>
+                <li><img src="./assets/images/rest-3.png" alt="image 3" class="hidden"></li>
             </ul>
             <button class="carousel__prev"></button>
             <button class="carousel__next"></button>
