--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -68,9 +66,9 @@
         </nav>
         <div class="carousel">
             <ul>
-                <li><img src="./assets/images/rest-1.png" alt="image 1" class="hidden"></li>
-                <li><img src="./assets/images/rest-2.png" alt="image 2" class="hidden"></li>
-                <li><img src="./assets/images/rest-3.png" alt="image 3" class="hidden"></li>
+                <li><img src="./assets/images/rest-1.png" alt="image 1"></li>
+                <li><img src="./assets/images/rest-2.png" alt="image 2"></li>
+                <li><img src="./assets/images/rest-3.png" alt="image 3"></li>
             </ul>
             <button class="carousel__prev"></button>
             <button class="carousel__next"></button>
