--- a/blog.html
+++ b/blog.html
@@ -82,13 +82,10 @@
                 <div class="text">Gabon</div>
             </div>
 
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
-
         </div>
         <br>
 
-        <div style="text-align:center">
+        <div class="carousel-currentSlider">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
