--- a/blog.html
+++ b/blog.html
@@ -67,29 +67,24 @@
 
         <div class="carousel-container">
 
-            <div class="mySlides fade">
+            <div class="carousel-images fade">
                 <img src="./assets/images/rest-1.png" style="width:100%">
                 <div class="text">Paris</div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="carousel-images fade">
                 <img src="./assets/images/rest-2.png" style="width:100%">
                 <div class="text">Bruxel</div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="carousel-images fade">
                 <img src="./assets/images/rest-3.png" style="width:100%">
                 <div class="text">Gabon</div>
             </div>
 
         </div>
-        <br>
 
-        <div class="carousel-currentSlider">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
+
 
     </section>
 
