--- a/blog.html
+++ b/blog.html
@@ -68,18 +68,18 @@
         <div class="carousel-container">
 
             <div class="carousel-images fade">
-                <img src="./assets/images/rest-1.png" style="width:100%">
+                <img src="./assets/images/rest-1.png" alt="image ">
                 <div class="text">Paris</div>
             </div>
 
             <div class="carousel-images fade">
-                <img src="./assets/images/rest-2.png" style="width:100%">
+                <img src="./assets/images/rest-2.png" alt="image ">
                 <div class="text">Bruxel</div>
             </div>
 
             <div class="carousel-images fade">
-                <img src="./assets/images/rest-3.png" style="width:100%">
-                <div class="text">Gabon</div>
+                <img src="./assets/images/rest-3.png" alt="image ">
+                <div class="text ">Gabon</div>
             </div>
 
         </div>
@@ -90,10 +90,10 @@
     <script>
     </script>
 
-    <script src="./assets/scripts/animate_card.js"></script>
-    <script src="./assets/scripts/menu.js"></script>
-    <script src="./assets/scripts/audio_layers.js"></script>
-    <script src="./assets/scripts/carousel.js"></script>
+    <script src="./assets/scripts/animate_card.js "></script>
+    <script src="./assets/scripts/menu.js "></script>
+    <script src="./assets/scripts/audio_layers.js "></script>
+    <script src="./assets/scripts/carousel.js "></script>
 
 
 </body>
