--- a/blog.html
+++ b/blog.html
@@ -40,14 +40,12 @@
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
                     </li>
-
                     <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
                     <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
 
                 </ul>
             </div>
-            <div class="nav-user" id="navUser">
-                <i class="fas fa-times" onclick="hideCon()"></i>
+            <div class="nav-user">
                 <ul>
                     <li>
                         <a href="./connexion.html"> Connexion</a>
@@ -58,10 +56,6 @@
 
                 </ul>
             </div>
-
-            <i class="fa-solid fa-user" id="user" onclick="ShowCon()"></i>
-            <i class="fa-solid fa-bars" id="humberger" onclick="showMenu()"></i>
-
 
         </nav>
 
