upgrade menu mini

--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,7 @@
     <section class="header">
         <nav class="navbar">
             <a href="./index.html"> <img class="logo" src="./assets/images/logo_s1.png" alt="logo"></a>
-            <div class="nav-link" id="navLink">
-                <i class="fas fa-times" onclick="hideMenu()"></i>
+            <div class="nav-link">
                 <ul>
                     <li>
                         <a href="./index.html"> Nous restaurants</a>
