--- a/commander.html
+++ b/commander.html
@@ -19,8 +19,7 @@
     <section class="header">
         <nav class="navbar">
             <a href="./index.html"> <img class="logo" src="./assets/images/logo_s1.png" alt="logo"></a>
-            <div class="nav-link" id="navLink">
-                <i class="fas fa-times" onclick="hideMenu()"></i>
+            <div class="nav-link">
                 <ul>
                     <li>
                         <a href="./index.html"> Nous restaurants</a>
@@ -42,14 +41,12 @@
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
                     </li>
-
                     <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
                     <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
 
                 </ul>
             </div>
-            <div class="nav-user" id="navUser">
-                <i class="fas fa-times" onclick="hideCon()"></i>
+            <div class="nav-user">
                 <ul>
                     <li>
                         <a href="./connexion.html"> Connexion</a>
@@ -60,10 +57,6 @@
 
                 </ul>
             </div>
-
-            <i class="fa-solid fa-user" id="user" onclick="ShowCon()"></i>
-            <i class="fa-solid fa-bars" id="humberger" onclick="showMenu()"></i>
-
 
         </nav>
         <!-- changer le nom de la classe pour ce qui est rechercher-->
