--- a/blog.html
+++ b/blog.html
@@ -76,8 +76,58 @@
             </div>
 
         </div>
+        <section id="testimonials" class="testimonials">
+            <h1> Vos avis sur nos restaurants
+            </h1>
+            <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem</p>
+            <div class="row">
+                <div class="testimonials-col">
+                    <img class="img-fourth" src="./assets/images/mwa.png">
+                    <div>
+                        <p>Lorem ipsum dolor sit Lorem ipsum dolor sit amet lorem ipsum dolor sit amet loremamet lorem ipsum dolor sit amet lorem</p>
+                        <h3>Gavin</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
 
+                </div>
+                <div class="testimonials-col">
+                    <img class="img-fourth" src="./assets/images/mwa.png">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet lorem iLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorempsum dolor sit amet lorem</p>
+                        <h3> Gavin </h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+
+                    </div>
+
+                </div>
+                <div class="testimonials-col">
+                    <img class="img-fourth" src="./assets/images/mwa.png">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet lorem iLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorempsum dolor sit amet lorem</p>
+                        <h3> Gavin </h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
     </section>
+
 
 
     <script>
