--- a/blog.html
+++ b/blog.html
@@ -79,12 +79,12 @@
         <section id="testimonials" class="testimonials">
             <h1> Vos avis sur nos restaurants
             </h1>
-            <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem</p>
+            <p>On met à jours notre liste chaque semaine pour afficher les 3 meilleurs avis</p>
             <div class="row">
                 <div class="testimonials-col">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
-                        <p>Lorem ipsum dolor sit Lorem ipsum dolor sit amet lorem ipsum dolor sit amet loremamet lorem ipsum dolor sit amet lorem</p>
+                        <p>J'ai adoré la collaboration NBA X McDonald's ! Les joueurs de basket-ball ont apporté une énergie incroyable à l'expérience culinaire de McDonald's.</p>
                         <h3>Gavin</h3>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -97,7 +97,7 @@
                 <div class="testimonials-col">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
-                        <p>Lorem ipsum dolor sit amet lorem iLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorempsum dolor sit amet lorem</p>
+                        <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. Je ne vois pas vraiment le lien entre les deux marques et je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
                         <h3> Gavin </h3>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -111,7 +111,7 @@
                 <div class="testimonials-col">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
-                        <p>Lorem ipsum dolor sit amet lorem iLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorempsum dolor sit amet lorem</p>
+                        <p>La collaboration NBA X McDonald's était amusante à essayer, mais je ne pense pas que cela deviendra un incontournable. C'était juste une autre façon pour McDonald's de se connecter avec un public plus jeune.</p>
                         <h3> Gavin </h3>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
