--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
                 <div class="testimonials-col">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
-                        <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. Je ne vois pas vraiment le lien entre les deux marques et je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
+                        <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
                         <h3> Gavin </h3>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
@@ -108,7 +108,7 @@
                 <div class="testimonials-col">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
-                        <p>La collaboration NBA X McDonald's était amusante à essayer, mais je ne pense pas que cela deviendra un incontournable. C'était juste une autre façon pour McDonald's de se connecter avec un public plus jeune.</p>
+                        <p>La collaboration NBA X McDonald's était amusante à essayer. C'était juste une autre façon pour McDonald's de se connecter avec un public plus jeune.</p>
                         <h3> Gavin </h3>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
