--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,8 @@
                         <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
                         <h3> Gavin </h3>
                         <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+
                         <i class="fas fa-star-half-alt"></i>
 
                     </div>
