--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
             </h1>
             <p>On met à jours notre liste chaque semaine pour afficher les 3 meilleurs avis</p>
             <div class="row">
-                <div class="testimonials-col">
+                <div style="background-color:rgba(30, 4, 4, 0.7);" class="col-3">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
                         <p>J'ai adoré la collaboration NBA X McDonald's ! Les joueurs de basket-ball ont apporté une énergie incroyable à l'expérience culinaire de McDonald's.</p>
@@ -94,7 +94,7 @@
                     </div>
 
                 </div>
-                <div class="testimonials-col">
+                <div style="background-color: rgba(30, 4, 4, 0.7);" class="col-3">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
                         <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
@@ -106,7 +106,7 @@
                     </div>
 
                 </div>
-                <div class="testimonials-col">
+                <div style="background-color: rgba(30, 4, 4, 0.7);" class="col-3">
                     <img class="img-fourth" src="./assets/images/mwa.png">
                     <div>
                         <p>La collaboration NBA X McDonald's était amusante à essayer. C'était juste une autre façon pour McDonald's de se connecter avec un public plus jeune.</p>
