add paddin_top like class

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -26,6 +26,7 @@
         <a href="./component-animate_card.html" onclick="loadPage('component-animate_card.html'); return false;">Charger le layer</a>
         <a href="./component-button.html" onclick="loadPage('component-button.html'); return false;">Boutton</a>
         <a href="./component-forms.html" onclick="loadPage('component-forms.html'); return false;">Forms</a>
+        <a href="./component-testimonials.html" onclick="loadPage('component-testimonials.html'); return false;">testimonials</a>
 
 
 
