--- a/blog.html
+++ b/blog.html
@@ -57,24 +57,25 @@
             </div>
 
         </nav>
+        <div class="padding_top">
+            <div class="carousel-container">
 
-        <div class="carousel-container">
+                <div class="carousel-images fade">
+                    <img src="./assets/images/rest-1.png" alt="image ">
+                    <div class="text">Paris</div>
+                </div>
 
-            <div class="carousel-images fade">
-                <img src="./assets/images/rest-1.png" alt="image ">
-                <div class="text">Paris</div>
+                <div class="carousel-images fade">
+                    <img src="./assets/images/rest-2.png" alt="image ">
+                    <div class="text">Bruxel</div>
+                </div>
+
+                <div class="carousel-images fade">
+                    <img src="./assets/images/rest-3.png" alt="image ">
+                    <div class="text ">Gabon</div>
+                </div>
+
             </div>
-
-            <div class="carousel-images fade">
-                <img src="./assets/images/rest-2.png" alt="image ">
-                <div class="text">Bruxel</div>
-            </div>
-
-            <div class="carousel-images fade">
-                <img src="./assets/images/rest-3.png" alt="image ">
-                <div class="text ">Gabon</div>
-            </div>
-
         </div>
         <section id="testimonials" class="testimonials">
             <h1> Vos avis sur nos restaurants
