update design gui

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -26,7 +26,9 @@
         <a href="./component-animate_card.html" onclick="loadPage('component-animate_card.html'); return false;">Charger le layer</a>
         <a href="./component-button.html" onclick="loadPage('component-button.html'); return false;">Boutton</a>
         <a href="./component-forms.html" onclick="loadPage('component-forms.html'); return false;">Forms</a>
+        <a href="./component-carousel.html" onclick="loadPage('component-carousel.html'); return false;">Carousel</a>
         <a href="./component-testimonials.html" onclick="loadPage('component-testimonials.html'); return false;">testimonials</a>
+
 
 
 
@@ -48,6 +50,17 @@
         }
     </script>
     <script src="../assets/scripts/form.js"></script>
+    <script src="./assets/scripts/initMap.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_IEjM6QGiiLnJfeQPRK7Pq6hHUBhrPDo&libraries=places&callback=initMap"></script>
+    <script src="./assets/scripts/menu.js"></script>
+    <script src="./assets/scripts/audio_layers.js "></script>
+    <script src="./assets/scripts/carousel.js "></script>
+    <script src="./assets/scripts/animate_card.js "></script>
+    <script src="./assets/scripts/sidebar.js "></script>
+    <script src="./assets/scripts/animate_card.js "></script>
+
+
+
 
 
 
