--- a/DesignGui/component-testimonials.html
+++ b/DesignGui/component-testimonials.html
@@ -4,7 +4,7 @@
     <p>On met à jours notre liste chaque semaine pour afficher les 3 meilleurs avis</p>
     <div class="row">
         <div style="background-color:rgba(30, 4, 4, 0.7);" class="col-3">
-            <img class="img-fourth" src="./assets/images/mwa.png">
+            <img class="img-fourth" src="../assets/images/mwa.png">
             <div>
                 <p>J'ai adoré la collaboration NBA X McDonald's ! Les joueurs de basket-ball ont apporté une énergie incroyable à l'expérience culinaire de McDonald's.</p>
                 <h3>Gavin</h3>
@@ -17,7 +17,7 @@
 
         </div>
         <div style="background-color: rgba(30, 4, 4, 0.7);" class="col-3">
-            <img class="img-fourth" src="./assets/images/mwa.png">
+            <img class="img-fourth" src="../assets/images/mwa.png">
             <div>
                 <p>Pour moi, la collaboration NBA X McDonald's n'a pas vraiment fonctionné. je n'ai rien remarqué de spécial dans le menu de McDonald's.</p>
                 <h3> Gavin </h3>
@@ -29,7 +29,7 @@
 
         </div>
         <div style="background-color: rgba(30, 4, 4, 0.7);" class="col-3">
-            <img class="img-fourth" src="./assets/images/mwa.png">
+            <img class="img-fourth" src="../assets/images/mwa.png">
             <div>
                 <p>La collaboration NBA X McDonald's était amusante à essayer. C'était juste une autre façon pour McDonald's de se connecter avec un public plus jeune.</p>
                 <h3> Gavin </h3>
