build print code

--- a/DesignGui/component-layer.html
+++ b/DesignGui/component-layer.html
@@ -1,58 +1,14 @@
-<!DOCTYPE html>
-<html>
+<div id="code" class="code">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Framework css</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+</div>
 
-
-</head>
-
-<body>
-
-    <!-- on peut mettre dans cette section ou non-->
-
-    <section id="layers" class="layers">
-        <!-- 
+<section id="layers" class="layers">
+    <!-- 
         <h2>Lorem</h2>
         <p>ipsum</p>
         ici un h et un p-->
-        <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
+    <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
 
-
-        <div class="row">
-            <div class="layers-col">
-                <img class="img-layers" src="../assets/images/antony.jpeg">
-                <div class="layer">
-                    <h3>Antony davis</h3>
-                </div>
-            </div>
-            <div class="layers-col">
-                <img class="img-layers" src="../assets/images/lebron.jpeg">
-                <div class="layer">
-                    <h3>Lebron James </h3>
-                </div>
-            </div>
-            <div class="layers-col">
-                <img class="img-layers" src="../assets/images/mick.jpeg">
-                <div class="layer">
-                    <h3>Mickal Jordan </h3>
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-    </section>
 
     <div class="row">
         <div class="layers-col">
@@ -76,8 +32,24 @@
 
     </div>
 
-    <!-- seulement la div-->
 
+
+
+</section>
+
+<div class="row">
+    <div class="layers-col">
+        <img class="img-layers" src="../assets/images/antony.jpeg">
+        <div class="layer">
+            <h3>Antony davis</h3>
+        </div>
+    </div>
+    <div class="layers-col">
+        <img class="img-layers" src="../assets/images/lebron.jpeg">
+        <div class="layer">
+            <h3>Lebron James </h3>
+        </div>
+    </div>
     <div class="layers-col">
         <img class="img-layers" src="../assets/images/mick.jpeg">
         <div class="layer">
@@ -85,11 +57,22 @@
         </div>
     </div>
 
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/scripts/form.js"></script>
+</div>
+
+<!-- seulement la div-->
+
+<div class="layers-col">
+    <img class="img-layers" src="../assets/images/mick.jpeg">
+    <div class="layer">
+        <h3>Mickal Jordan </h3>
+    </div>
+</div>
+
+<script src="../assets/js/main.js"></script>
+<script src="../assets/scripts/form.js"></script>
 
 
-</body>
+
 
 
 </html>
