--- a/DesignGui/component-animate_card.html
+++ b/DesignGui/component-animate_card.html
@@ -1,3 +1,7 @@
+<div id="code" class="code">
+
+</div>
+
 <section id="animate_card" class="animate_card">
     <div class="animate_card-col" id="first-section">
         <img src="../assets/images/slider1.png" alt="slider1">
