--- a/DesignGui/component-button.html
+++ b/DesignGui/component-button.html
@@ -1,3 +1,7 @@
+<div id="code" class="code">
+
+</div>
+
 <button onclick="location.href='#'">Se connecter</button>
 <button onclick="location.href='#'" class="button-secondary">Se connecter</button>
 <button onclick="location.href='#'" class="button-warning">Se connecter</button>
