--- a/DesignGui/component-forms.html
+++ b/DesignGui/component-forms.html
@@ -1,3 +1,7 @@
+<div id="code" class="code">
+
+</div>
+
 <form>
     <div class="form-group">
         <label for="exampleInputEmail1">Prénom</label>
