build print code

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.397), rgba(30, 4, 4, 0.7)), url(../../assets/images/background_nba.png);">
+<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.397), rgba(30, 4, 4, 0.7)), url(../assets/images/background_nba.png);">
     <div class="design_gui">
         <h1>Design GUI</h1>
         <a href="./component-form.html" onclick="loadPage('component-form.html'); return false;">Formulaire</a>
