build print code

--- a/DesignGui/component-form.html
+++ b/DesignGui/component-form.html
@@ -1,5 +1,6 @@
-<div id="code" class="code">
+<div id="code" class="language-html">
 </div>
+
 
 <div class="row">
 
@@ -41,34 +42,5 @@
             </div>
         </div>
     </div>
-    <!--
-    <div class="form-connexion" style="background: none;">
-        <div class="form-connexion-content">
-            <div class="form-connexion-header">
-                <h1>Se connecter</h1>
-            </div>
-            <div class="form-connexion-body">
-                <form action="#" method="POST">
-                    <div class="form-connexion-input">
-                        <input type="email" name="email" id="email" placeholder="Email">
-                    </div>
-                    <div class="form-connexion-input">
-                        <span class="error"></span>
-                        <input type="password" name="password" id="password" placeholder="Mot de passe">
 
-                    </div>
-                    <div class="form-connexion-links">
-                        <a href="#">Mot de passe oublié ?</a>
-                        <div class="eye">
-                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="form-connexion-input-submit">
-                        <input type="submit" value="Se connecter" class="button-success">
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div> -->
 </div>
