try my best eheh

--- a/connexion.html
+++ b/connexion.html
@@ -60,7 +60,7 @@
 
         </nav>
         <!-- le form-->
-        <div class="form-connexion">
+        <div class="form-connexion" style="  background: linear-gradient(90deg, rgba(41, 133, 138, 0.7) 0%, rgba(123, 93, 53, 1) 35%, rgb(136, 59, 108) 100%);        ">
             <div class="form-connexion-content">
                 <div class="form-connexion-logo">
                     <img src="./assets/images/logo_s1.png" alt="logo">
