--- a/DesignGui/component-form.html
+++ b/DesignGui/component-form.html
@@ -1,4 +1,4 @@
-<div id="code" class="language-html">
+<div id="code" class="code">
 </div>
 
 
@@ -43,4 +43,36 @@
         </div>
     </div>
 
+
+</div>
+<br>
+
+
+<div class="form-connexion">
+    <div class="form-connexion-content">
+        <div class="form-connexion-body">
+            <form action="#" method="POST">
+                <div class="form-connexion-input">
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+                <div class="form-connexion-input">
+                    <span class="error"></span>
+                    <input type="password" name="password" id="password" placeholder="Mot de passe">
+
+                </div>
+                <div class="form-connexion-links">
+                    <a href="#">Mot de passe oublié ?</a>
+                    <div class="eye">
+                        <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="form-connexion-input-submit">
+                    <input type="submit" value="Se connecter" class="button-success">
+                </div>
+                <div class="form-connexion-input-submit">
+                    <a class="link" href="./inscription.html">Inscrivez vous</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
