--- a/DesignGui/component-forms.html
+++ b/DesignGui/component-forms.html
@@ -3,16 +3,13 @@
 
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Prénom</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Prénom">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Nom</label>
-        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nom">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Sujet</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
