try my best eheh

--- a/DesignGui/component-forms.html
+++ b/DesignGui/component-forms.html
@@ -2,12 +2,11 @@
 </div>
 
 <form>
-    <div class="form-group">
+    <div class="form-connexion-input">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <div class="form-group">
+    <div class="form-connexion-input">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
@@ -15,5 +14,8 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-connexion-input-submit">
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
 </form>
