add carousel to product + page deco component

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="./index.html"> Nous restaurants</a>
                     </li>
                     <li>
-                        <a href="./products.html"> Nos produits </a>
+                        <a href="./product.html"> Nos produits </a>
                     </li>
                     <li>
                         <a href="./blog.html"> Blog</a>
